--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": ".",
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@apollo/react-hooks": "^4.0.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +16,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-grid-carousel": "^1.0.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-toastify": "^9.0.5",
     "routes": "^2.1.0",
     "web-vitals": "^2.1.4",
