--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@apollo/react-hooks": "^4.0.0",
+    "@chakra-ui/react": "^2.2.4",
+    "@chakra-ui/theme": "^2.1.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,7 +17,10 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
+    "lodash.debounce": "^4.0.8",
+    "mdb-react-ui-kit": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
@@ -25,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.5",
+    "reactstrap": "^9.1.2",
     "routes": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
